Update were made to about us

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>About</title>
 </head>
+
 <body>
     {{>header}}
-    <p>{{message}}</p>
+    <div class="container m-auto ">
+        <h1>{{title}}</h1>
+        <img src="/img/about.jpg" alt="" width="50%">
+        {{>footer}}
+    </div>
 
-    {{>footer}}
 </body>
+
 </html>
